# concat-rs

./: Cargo.toml  LICENSE  README.md
examples/: cat.rs
src/: lib.rs  tests.rs
