[package]
name = "concat"
version = "0.1.0"
authors = ["Francisco Giordano <frangio.1@gmail.com>"]
description = "A reader adaptor that wraps around an iterator of readers and exposes their contents sequentially, i.e. concatenated."
repository = "https://github.com/frangio/concat.rs"
license = "MIT"
